--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -704,7 +704,7 @@ header nav .nav-tools {
   overflow: hidden;
   vertical-align: middle;
   line-height: 20px;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .grnt-odometer-track {
