--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1320,22 +1320,23 @@
 }
 
 .section:has(.cards.joining-perks) h1 {
-  font-size: 64px;
+  font-size: 54px;
 }
 
 .section:has(.cards.joining-perks) h2 {
-  font-size: 36px;
-  margin-bottom: 12px;
+  font-size: 32px;
+  margin-bottom: 4px;
+  padding: 0 8px;
 }
 
 .section:has(.cards.joining-perks) h3 {
-  font-size: 22px;
+  font-size: 16px;
   font-weight: 400;
-  margin: 0 8px 32px;
+  margin: 0 8px 10px;
 }
 
 .section:has(.cards.joining-perks) {
-  padding: 72px 0 18px;
+  padding: 48px 0 32px;
 }
 
 .cards.joining-perks.swiper {
@@ -1348,7 +1349,7 @@
 
 .cards.joining-perks .swiper-slide {
   height: auto;
-  min-height: 525px;
+  min-height: 500px;
   display: flex;
 }
 
@@ -1641,6 +1642,42 @@
     height: 460px;
     min-height: 460px;
   }
+
+  .section:has(.cards.joining-perks) h1 {
+    font-size: 64px;
+  }
+  
+  .section:has(.cards.joining-perks) h2 {
+    font-size: 36px;
+    margin-bottom: 12px;
+  }
+  
+  .section:has(.cards.joining-perks) h3 {
+    font-size: 22px;
+    font-weight: 400;
+    margin: 0 8px 32px;
+  }
+  
+  .section:has(.cards.joining-perks) {
+    padding: 72px 0 18px;
+  }
+
+  .cards.joining-perks .cards-card-body h3,
+.cards.joining-perks .benefit-cards .cards-card-body h3 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0;
+}
+
+.cards.joining-perks .cards-card-body p,
+.cards.joining-perks .benefit-cards .cards-card-body p {
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 1.8;
+  text-align: left;
+  margin: 4px 0 0;
+}
 
   /* All About Card Desktop Styles */
   .cards.all-about-card .swiper-slide {
